--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'IRC frontend to Acme::MetaSyntactic'
 author:
   - 'Philippe Bruhat (BooK) <book@cpan.org>'
 build_requires:
+  Acme::MetaSyntactic::MultiList: 0
   File::Find: 0
   List::Util: 0
   Test::More: 0.88
@@ -26,4 +27,4 @@ requires:
 resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Bot-BasicBot-Pluggable-Module-MetaSyntactic
   repository: http://github.com/book/Bot-BasicBot-Pluggable-Module-MetaSyntactic.git
-version: 1.003
+version: 1.004
